--- a/index.html
+++ b/index.html
@@ -14,36 +14,44 @@
   -->
   
   <div class="flags">
-    <h2 class="label">Poland</h2>
+    <h2 class="label hoverable">Poland</h2>
     <div class="flag">
       <div class="white twovert"></div>
       <div class="red twovert"></div>
     </div>
   
-    <h2 class="label">Luxembourg</h2>
+    <h2 class="label hoverable">Luxembourg</h2>
     <div class="flag">
       <div class="red threevert"></div>
       <div class="red threevert" id="white"></div>
       <div class="light-blue threevert"></div>
     </div>
 
-    <h2 class="label">Thailand</h2>
+    <h2 class="label hoverable">Thailand</h2>
     <div class="flag">
-      <div class="thailand-red"></div>
-      <div class="thailand-white"></div>
-      <div class="thailand-blue"></div>
-      <div class="thailand-white"></div>
-      <div class="thailand-red"></div>
+      <div class="thailand-red narrow"></div>
+      <div class="thailand-white narrow"></div>
+      <div class="thailand-blue wide"></div>
+      <div class="thailand-white narrow"></div>
+      <div class="thailand-red narrow"></div>
     </div>
   
-    <h2 class="label">Romania</h2>
-    <div class="flag" style="">
+    <h2 class="label hoverable">Romania</h2>
+    <div class="flag" style="display: flex; flex-direction: row;">
       <!-- insert flag here -->
+      
+      <div class="romania-blue ver threehoriz"></div>
+      <div class="romania-yellow ver threehoriz"></div>
+      <div class="romania-red ver threehoriz"></div>
     </div>
   
-    <h2 class="label">Mexico</h2>
-    <div class="flag">
+    <h2 class="label hoverable">Mexico</h2>
+    <div class="flag" style="display: flex; flex-direction: row;">
       <!-- insert flag here -->
+      <div class="mexico-green threehoriz"></div>
+      <div class="mexico-img threehoriz"><image class = "eagle" img src="eagle.png" alt="Mexico Eagle"></div>
+      
+      <div class="mexico-red  threehoriz"></div>
     </div>
 
     <h2>Margin</h2>
